console-experience/src-tauri/check_errors_v2.txt
    Checking console-experience v0.1.0 (C:\Users\diabl\OneDrive\Documentos\shell_game\console-experience\src-tauri)
warning: unused import: `crate::application::DIContainer`
  --> src\application\commands\mod.rs:11:5
   |
11 | use crate::application::DIContainer;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tauri::State`
  --> src\application\commands\mod.rs:24:5
   |
24 | use tauri::State;
   |     ^^^^^^^^^^^^

error[E0782]: expected a type, found a trait
   --> src\application\commands\mod.rs:181:5
    |
181 |     WiFiPort::disconnect_network(&adapter)
    |     ^^^^^^^^
    |
help: you can add the `dyn` keyword if you want a trait object
    |
181 |     <dyn WiFiPort>::disconnect_network(&adapter)
    |     ++++         +
help: you may have misspelled this associated item, causing `WiFiPort` to be interpreted as a type rather than a trait
    |
181 -     WiFiPort::disconnect_network(&adapter)
181 +     WiFiPort::connect_network(&adapter)
    |

For more information about this error, try `rustc --explain E0782`.
warning: `console-experience` (lib) generated 2 warnings
error: could not compile `console-experience` (lib) due to 1 previous error; 2 warnings emitted
